--- a/smoke_f0.ioc
+++ b/smoke_f0.ioc
@@ -11,8 +11,9 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -93,10 +94,8 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=INPUT_B_2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=EN_B
 PA6.Locked=true
-PA6.Signal=GPIO_Output
+PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=CS_MAG
 PA7.Locked=true
@@ -160,7 +159,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -179,6 +178,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI1.CalculateBaudRate=750.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -186,6 +187,8 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
