--- a/smoke_f0.ioc
+++ b/smoke_f0.ioc
@@ -30,6 +30,7 @@ Mcu.Pin18=PB5
 Mcu.Pin19=PB6
 Mcu.Pin2=PA1
 Mcu.Pin20=PB7
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
@@ -37,7 +38,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
@@ -192,6 +193,8 @@ TIM3.IPParameters=Channel-PWM Generation1 CH1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F042K6
 boardIOC=true
 isbadioc=false
